# vision-core

./: .gitignore  README.md  meson.build
include/types/: detection.hpp  frame.hpp
include/utils/: detection_utils.hpp  geometry_utils.hpp  json_utils.hpp  vector_utils.hpp
tests/: detection_test.cpp  detection_utils_test.cpp  frame_test.cpp  geometry_utils_test.cpp  vector_utils_test.cpp
